Update WebSecurityConfig.java